fix for YT player not showing play button after strim switch

--- a/assets/styles/themes/light/main-light.less
+++ b/assets/styles/themes/light/main-light.less
@@ -43,6 +43,7 @@ html {
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
+    z-index: 2;
 }
 
 #strimheader {
